--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -7,8 +7,19 @@
 
 </head>
 <body>
-<h1>Welcome <%=user.username%></h1>
-<p>The dashboard page is not implemented yet</p>
+<h1>Welcome <span id="user-info"><%=user.username%></span></h1>
+<ul>
+    <li><a href="#" id="schedule-ref">Schedule</a></li>
+    <li><a href="#" id="profile-ref">Profile</a></li>
+    <li><a href="#" id="courses-ref">Courses</a></li>
+    <li><a href="#" id="trainers-ref">Trainers</a></li>
+
+</ul>
+<div id="data-holder"><h2>Will be replaced by actual sub-page</h2></div>
+<div id="error-holder"></div>
+
+<script src="/js/utils.js"></script>
+<script src="/js/dashboard.js"></script>
 
 </body>
 </html>
