--- a/views/courses.ejs
+++ b/views/courses.ejs
@@ -1,2 +1,18 @@
 <!--partial html file for page rendering-->
 <h2>Courses Of <%=user.username%></h2>
+<ul>
+    <% for (let i = 0; i < courses.length; i++){ %>
+        <li>
+            <h3><%=courses[i].courseName%></h3>
+            <h4><%=courses[i].date%> <%=courses[i].startTime%>:00 -- <%=courses[i].endTime%>:00</h4>
+            <p><%=courses[i].description%>
+            <p>Instructor: <%=courses[i].instructor%></p>
+            <p><%=courses[i].enrolledMember.length%>/<%=courses[i].capacity%> Enrolled</p>
+            <% if (!courses[i].enrolledMember.includes(user.username)) { %>
+                <button onclick=onRegisterCourseClicked(<%=courses[i].id%>)>Register</button>
+            <% } else { %>
+                <button onclick="onUnregisterCourseClicked(<%=courses[i].id%>)">Unegister</button>
+            <% } %>
+        </li>
+    <%}%>
+</ul>
