Now if there is no more space in a course, the register button will be disabled. And register/unregister course will change the text in the html

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -1,7 +1,7 @@
 
 body {background: skyblue;
     font-family: Verdana, serif; color: white; padding: 30px;}
-h1{font-size: 48px; text-transform: uppercase; letter-spacing: 2px; text-align: center}
+h1{font-size: 48px; letter-spacing: 2px; text-align: center}
 h2{font-size: 36px; letter-spacing: 2px;text-align: center}
 p, li {font-size: 16px; text-align: center}
 ul {list-style: none}
