Now schedule appointment with trainer works correctly.

--- a/views/trainers.ejs
+++ b/views/trainers.ejs
@@ -10,6 +10,7 @@
                 <button onclick=onTrainerTimeExpandClicked(<%=trainers[i].id%>)>Expand</button>
             </div>
             <div id="schedule-holder<%=trainers[i].id%>"></div>
+            <p id="info-holder<%=trainers[i].id%>"></p>
         </li>
     <% } %>
 </ul>
