--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,26 +4,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <style>
+        form {
+            text-align: center;
+            vertical-align: middle;
+        }
+        input[type=text] {
+            width: 30%;
+            color: white;
+            margin: 8px 0;
+            border: none;
+            border-radius: 18px;
+            cursor: pointer;
+            display: inline-block;
+        }
+        label {
+            width: 240px;
+            display: inline-block;
+            padding: 8px;
+        }
+        #gender {
+            width: 30%;
+            margin: 8px 0;
+            border: none;
+            border-radius: 18px;
+            cursor: pointer;
+            display: inline-block;
+        }
+    </style>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="/styles/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h2>Register a new user</h2>
+    <h2>Create Account</h2>
     <form action="/users" method="POST">
         <div class="form-group">
-            <label for="name">Name:</label>
-            <input type="text" class="form-control" name="Name" id="Name">
+            <label for="first-name">First Name:</label>
+            <input type="text" class="form-control" name="first-name" id="first-name">
         </div>
         <div class="form-group">
-            <label for="name">DOB:</label>
+            <label for="last-name">Last Name:</label>
+            <input type="text" class="form-control" name="last-name" id="last-name">
+        </div>
+        <div class="form-group">
+            <label for="email">Email</label>
+            <input type="text" class="form-control" name="email" id="email">
+        </div>
+        <div class="form-group">
+            <label for="phone">Phone:</label>
+            <input type="text" class="form-control" name="phone" id="phone">
+        </div>
+        <div class="form-group">
+            <label for="DOB">DOB(MM-DD-YYYY):</label>
             <input type="text" class="form-control" name="DOB" id="DOB">
         </div>
         <div class="form-group">
-            <label for="name">Gender:</label>
-            <input type="text" class="form-control" name="Gender" id="Gender">
+            <label for="gender">Gender:</label>
+            <select id="gender" class="form-control" name="gender">
+                <option selected value="Select">Select</option>
+                <option value="Male">Male</option>
+                <option value="Female">Female</option>
+                <option value="Prefer not to say">Prefer not to say</option>
+            </select>
         </div>
         <div class="form-group">
-            <label for="name">Address:</label>
-            <input type="text" class="form-control" name="Address" id="Address">
+            <label for="street-address">Street address:</label>
+            <input type="text" class="form-control" name="street-address" id="street-address">
+        </div>
+        <div class="form-group">
+            <label for="city">City:</label>
+            <input type="text" class="form-control" name="city" id="city">
+        </div>
+        <div class="form-group">
+            <label for="state">State:</label>
+            <input type="text" class="form-control" name="state" id="state">
+        </div>
+        <div class="form-group">
+            <label for="zip-code">Zip code:</label>
+            <input type="text" class="form-control" name="zip-code" id="zip-code">
+        </div>
+        <div class="form-group">
+            <label for="weight">Weight:</label>
+            <input type="text" class="form-control" name="weight" id="weight">
+        </div>
+        <div class="form-group">
+            <label for="height">Height:</label>
+            <input type="text" class="form-control" name="height" id="height">
         </div>
         <button class="btn btn-primary">Create</button>
     </form>
