--- a/views/register.ejs
+++ b/views/register.ejs
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <style>
+        h2{
+            position: relative;
+            left: 120px;
+        }
         form {
             text-align: center;
             vertical-align: middle;
+            display: inline;
         }
         input[type=text] {
             width: 30%;
-            color: white;
             margin: 8px 0;
             border: none;
             border-radius: 18px;
@@ -31,20 +35,30 @@
             cursor: pointer;
             display: inline-block;
         }
+        button{
+            margin: -20px -50px; 
+            position:relative;
+            top:50%; 
+            left:52%;
+        }
     </style>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="/styles/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <h2>Create Account</h2>
-    <form action="/users" method="POST">
+    <form action="/create-data" method="POST">
         <div class="form-group">
-            <label for="first-name">First Name:</label>
-            <input type="text" class="form-control" name="first-name" id="first-name">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" name="username" id="username">
         </div>
         <div class="form-group">
-            <label for="last-name">Last Name:</label>
-            <input type="text" class="form-control" name="last-name" id="last-name">
+            <label for="firstName">First Name:</label>
+            <input type="text" class="form-control" name="firstName" id="firstName">
+        </div>
+        <div class="form-group">
+            <label for="lastName">Last Name:</label>
+            <input type="text" class="form-control" name="lastName" id="lastName">
         </div>
         <div class="form-group">
             <label for="email">Email</label>
@@ -68,22 +82,6 @@
             </select>
         </div>
         <div class="form-group">
-            <label for="street-address">Street address:</label>
-            <input type="text" class="form-control" name="street-address" id="street-address">
-        </div>
-        <div class="form-group">
-            <label for="city">City:</label>
-            <input type="text" class="form-control" name="city" id="city">
-        </div>
-        <div class="form-group">
-            <label for="state">State:</label>
-            <input type="text" class="form-control" name="state" id="state">
-        </div>
-        <div class="form-group">
-            <label for="zip-code">Zip code:</label>
-            <input type="text" class="form-control" name="zip-code" id="zip-code">
-        </div>
-        <div class="form-group">
             <label for="weight">Weight:</label>
             <input type="text" class="form-control" name="weight" id="weight">
         </div>
@@ -93,5 +91,8 @@
         </div>
         <button class="btn btn-primary">Create</button>
     </form>
+    <!-- <form action="/" method="POST">
+        <button class="btn btn-primary">Login</button>
+    </form> -->
 </body>
 </html>
