--- a/react/src/Components/style/RegisterForm.css
+++ b/react/src/Components/style/RegisterForm.css
@@ -1,36 +1,40 @@
-.register-form h2{
-    position: relative;
-    left: 120px;
+.register-form {
+  text-align: center;
+  vertical-align: middle;
+  display: inline;
 }
-.register-form  {
-    text-align: center;
-    vertical-align: middle;
-    display: inline;
-}
-.register-form  input[type=text] {
-    width: 30%;
-    margin: 8px 0;
-    border: none;
-    border-radius: 18px;
-    cursor: pointer;
-    display: inline-block;
+.register-form input[type='text'] {
+  position: relative;
+  right: 95px;
+  width: 20%;
+  margin: 8px 0;
+  border: none;
+  border-radius: 18px;
+  cursor: pointer;
+  display: inline-block;
 }
 .register-form label {
-    width: 240px;
-    display: inline-block;
-    padding: 8px;
+  position: relative;
+  right: 95px;
+  width: 200px;
+  display: inline-block;
+  padding: 8px;
 }
 #gender {
-    width: 30%;
-    margin: 8px 0;
-    border: none;
-    border-radius: 18px;
-    cursor: pointer;
-    display: inline-block;
+  position: relative;
+  right: 95px;
+  width: 20%;
+  margin: 8px 0;
+  border: none;
+  border-radius: 18px;
+  cursor: pointer;
+  display: inline-block;
 }
-.register-form button{
-    margin: -20px -50px;
-    position:relative;
-    top:50%;
-    left:52%;
+.register-form button {
+  margin: -20px -50px;
+  position: relative;
+  right: 80px;
+}
+#back-button {
+  left: 80px;
 }
