--- a/react/src/App.css
+++ b/react/src/App.css
@@ -20,6 +20,9 @@ body {
   margin-top: -30px;
   padding-top: 40px;
   margin-bottom: 50px;
+  position: fixed;
+  width: 100%;
+  z-index: 1;
 }
 
 /*.App-header {*/
