--- a/react/src/Components/style/Dashboard.css
+++ b/react/src/Components/style/Dashboard.css
@@ -2,3 +2,25 @@
   position: relative;
   right: 15px;
 }
+
+.side-nav {
+  background: darkslategrey ;
+  height: 100%;
+  width: 300px;
+  position: fixed;
+  z-index: 1;
+  top: 90px;
+  left: 0;
+  overflow-x: hidden;
+}
+
+.side-nav h2 {
+  font-size: 1.5em;
+}
+
+.side-nav li {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: white 1px;
+}
+
