fix warning for profile.js and modify schedule page

--- a/react/src/Components/style/Profile.css
+++ b/react/src/Components/style/Profile.css
@@ -3,18 +3,9 @@
   max-width: 400px;
   margin: auto;
   text-align: center;
+  position: relative;
+  top: 150px;
 }
 .card h3 {
   color: Black;
-}
-
-.title {
-  color: grey;
-  font-size: 18px;
-}
-
-a {
-  text-decoration: none;
-  font-size: 22px;
-  color: black;
 }
