--- a/react/src/App.css
+++ b/react/src/App.css
@@ -6,6 +6,8 @@ body {
 .App {
   text-align: center;
   background-color: #282c34;
+  /*background: url("https://wallpaperaccess.com/full/1633729.jpg");*/
+  /*height: 100%;*/
 }
 
 .App-logo {
@@ -14,9 +16,9 @@ body {
 }
 
 .App-header {
-  background-color:black;
+  background: url("https://wallpaperaccess.com/full/1633729.jpg");
   color: white;
-  height: 120px;
+  height: 100px;
   margin-top: -30px;
   padding-top: 40px;
   margin-bottom: 50px;
@@ -42,4 +44,29 @@ body {
 
 #login-error {
   color: red;
+}
+
+.App-header-main {
+  background: url("https://wallpaperaccess.com/full/1633729.jpg");
+  color: white;
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-bottom: 100px;
+}
+
+.header-container {
+  background-color: white;
+  color: black;
+  border-radius: 25px;
+  opacity: 70%;
+  margin-left: 300px;
+  margin-right: 300px;
+}
+
+#login-form {
+  margin-top: 50px;
 }
