--- a/react/src/Components/style/Dashboard.css
+++ b/react/src/Components/style/Dashboard.css
@@ -8,8 +8,8 @@
   height: 100%;
   width: 300px;
   position: fixed;
+  padding-top: 20px;
   z-index: 1;
-  top: 90px;
   left: 0;
   overflow-x: hidden;
 
@@ -33,5 +33,17 @@
 
 .side-nav li:hover {
   background-color: seagreen;
+}
+
+.main-container {
+  position: fixed;
+  height: 100%;
+  width: 100%;
+  overflow: scroll;
+  background: url("https://wallpaperaccess.com/full/1633729.jpg");;
+}
+
+.main-container::-webkit-scrollbar {
+  display: none;
 }
 
