--- a/react/src/Components/style/TrainerSchedule.css
+++ b/react/src/Components/style/TrainerSchedule.css
@@ -1,3 +1,14 @@
+.schedule-container {
+    margin: -20px 30px 20px 300px;
+    background: white;
+    opacity: 90%;
+    color: black;
+    padding-top: -20px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
 #trainer-schedule {
     margin: auto;
 }
