--- a/react/src/Components/style/TrainerSchedule.css
+++ b/react/src/Components/style/TrainerSchedule.css
@@ -7,6 +7,8 @@
   padding-bottom: 20px;
   padding-left: 10px;
   padding-right: 10px;
+  display: flex;
+  flex-direction: column;
 }
 
 #trainer-schedule {
@@ -15,6 +17,7 @@
 
 #trainer-schedule th td {
   width: 100px;
+  height: 30px;
 }
 
 #trainer-schedule .first-row {
