--- a/react/src/Components/style/Profile.css
+++ b/react/src/Components/style/Profile.css
@@ -1,11 +1,6 @@
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  max-width: 400px;
-  margin: auto;
-  text-align: center;
+#edit-button {
   position: relative;
-  top: 150px;
-}
-.card h3 {
-  color: Black;
+  width: 400px;
+  top: 50%;
+  left: 150px;
 }
