--- a/react/src/Components/style/PersonalSchedule.css
+++ b/react/src/Components/style/PersonalSchedule.css
@@ -4,6 +4,7 @@
     opacity: 90%;
     color: black;
     padding: 20px;
-    /*display: flex;*/
-    /*flex-direction: column;*/
+    display: flex;
+    flex-direction: column;
 }
+
