--- a/react/src/Components/style/TrainerSchedule.css
+++ b/react/src/Components/style/TrainerSchedule.css
@@ -40,7 +40,7 @@
   box-sizing: border-box;
   text-decoration: none;
   text-transform: uppercase;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   /* //font-weight: 400; */
   color: cornflowerblue;
   text-align: center;
