--- a/react/src/Components/style/Courses.css
+++ b/react/src/Components/style/Courses.css
@@ -17,13 +17,13 @@
   height: 120px;
   border-radius: 50%;
   overflow: hidden;
-  display : flex;
+  display: flex;
   justify-content: center;
 }
 
 .list-text {
   flex: 6;
-  padding-left:40px;
+  padding-left: 40px;
   margin-right: 20px;
 }
 
@@ -35,31 +35,30 @@
   text-align: left;
 }
 
-
 .list-container button {
-  display:inline-block;
-  padding:0.35em 1.2em;
-  border:0.1em solid black;
-  margin:0 0.3em 0.3em 0;
-  border-radius:0.12em;
+  display: inline-block;
+  padding: 0.35em 1.2em;
+  border: 0.1em solid black;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.12em;
   box-sizing: border-box;
-  text-decoration:none;
-  font-family:'Roboto',sans-serif;
-  font-weight:300;
-  color:black;
-  text-align:center;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  color: black;
+  text-align: center;
   transition: all 0.2s;
   /*background-color: #282c34*/
   background: none;
 }
 
-.list-container button:hover{
+.list-container button:hover {
   color: white;
   background-color: black;
 }
 
-.list-container button[disabled]{
-  background-color: #BBBBBB;
+.list-container button[disabled] {
+  background-color: #bbbbbb;
   pointer-events: none;
 }
 
@@ -75,5 +74,4 @@
 
 .schedule-button {
   margin-top: 110px;
-
 }
