--- a/react/src/Components/style/Schedule.css
+++ b/react/src/Components/style/Schedule.css
@@ -1,9 +1,8 @@
-
 .schedule-text {
   /*position: relative;*/
   /*left: 44%;*/
   display: flex;
-  flex-direction:row;
+  flex-direction: row;
 }
 
 .schedule-list-container {
@@ -28,27 +27,27 @@
 }
 
 .schedule-list-container button {
-  display:inline-block;
-  padding:0.35em 1.2em;
-  border:0.1em solid black;
-  border-radius:0.12em;
+  display: inline-block;
+  padding: 0.35em 1.2em;
+  border: 0.1em solid black;
+  border-radius: 0.12em;
   box-sizing: border-box;
-  text-decoration:none;
-  font-family:'Roboto',sans-serif;
-  font-weight:300;
-  color:black;
-  text-align:center;
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  color: black;
+  text-align: center;
   transition: all 0.2s;
   /*background-color: #282c34*/
   background: none;
 }
 
-.schedule-list-container button:hover{
+.schedule-list-container button:hover {
   color: white;
   background-color: black;
 }
 
-.schedule-list-container button[disabled]{
-  background-color: #BBBBBB;
+.schedule-list-container button[disabled] {
+  background-color: #bbbbbb;
   pointer-events: none;
 }
