change opacity value from presentage to double to avoid presented bug

--- a/react/src/App.css
+++ b/react/src/App.css
@@ -55,7 +55,7 @@ body {
   background-color: white;
   color: black;
   border-radius: 25px;
-  opacity: 70%;
+  opacity: 0.7;
   margin-left: 300px;
   margin-right: 300px;
 }
