--- a/react/src/Components/style/Courses.css
+++ b/react/src/Components/style/Courses.css
@@ -7,7 +7,7 @@
   display: flex;
   margin: 20px 30px 20px 300px;
   background: white;
-  opacity: 90%;
+  opacity: 0.9;
   color: black;
   padding: 10px;
 }
