--- a/react/src/Components/style/TrainerSchedule.css
+++ b/react/src/Components/style/TrainerSchedule.css
@@ -1,7 +1,7 @@
 .schedule-container {
   margin: -20px 30px 20px 300px;
   background: white;
-  opacity: 90%;
+  opacity: 0.9;
   color: black;
   padding-top: -20px;
   padding-bottom: 20px;
