--- a/react/src/App.css
+++ b/react/src/App.css
@@ -37,7 +37,7 @@ body {
 }
 
 .App-header-main {
-  background: url("https://wallpaperaccess.com/full/1633729.jpg");
+  background: url('https://wallpaperaccess.com/full/1633729.jpg');
   color: white;
   height: 100%;
   width: 100%;
@@ -68,7 +68,7 @@ body {
   border-radius: 0.12em;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 300;
   color: black;
   text-align: center;
