--- a/react/src/Components/style/EditProfile.css
+++ b/react/src/Components/style/EditProfile.css
@@ -22,7 +22,7 @@
   position: relative;
   top: 30px;
 }
-.edit-form input[type="text"] {
+.edit-form input {
   position: relative;
   right: 95px;
   width: 30%;
@@ -41,6 +41,11 @@
 }
 #update-button {
   position: relative;
-  left: 200px;
+  left: 320px;
   bottom: 60px;
+}
+#reset-button {
+  position: relative;
+  left: 150px;
+  bottom: 10px;
 }
