edit the register form using react hook form, and display error message using react instead of a json page

--- a/react/src/Components/style/RegisterForm.css
+++ b/react/src/Components/style/RegisterForm.css
@@ -9,7 +9,7 @@
   position: relative;
   top: 50px;
 }
-.register-form input[type="text"] {
+.register-form input {
   position: relative;
   right: 95px;
   width: 20%;
