--- a/react/src/Components/style/RegisterForm.css
+++ b/react/src/Components/style/RegisterForm.css
@@ -1,17 +1,13 @@
-.register-form h3 {
-  position: relative;
-  bottom: 50%;
-}
 .register-form {
   position: relative;
-  top: 30px;
-  line-height: 30%;
+  top: 25px;
+  line-height: 5%;
 }
 
 .register-form input {
   position: relative;
   right: 95px;
-  width: 20%;
+  width: 25%;
   margin: 8px 0;
   border: none;
   border-radius: 18px;
@@ -35,7 +31,7 @@
 #gender {
   position: relative;
   right: 95px;
-  width: 20%;
+  width: 25%;
   margin: 8px 0;
   border: none;
   border-radius: 18px;
@@ -43,11 +39,35 @@
   display: inline-block;
 }
 
-/* #back-button {
-  left: 80px;
-} */
-
 .register-form a {
   position: relative;
-  top: 50px;
+  top: 30px;
 }
+
+#usernameError {
+  position: relative;
+  bottom: 26px;
+  left: 280px;
+}
+
+#passwordError {
+  position: relative;
+  bottom: 42px;
+  left: 280px;
+}
+
+#emailError {
+  position: relative;
+  bottom: 28px;
+  left: 270px;
+}
+
+#duplicatesError {
+  position: relative;
+  top: 70px;
+}
+
+/* #duplicatesError {
+  position: relative;
+  top: 75px;
+} */
