--- a/react/src/Components/style/Form.css
+++ b/react/src/Components/style/Form.css
@@ -3,9 +3,34 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding-left: 200px;
-    padding-right: 200px;
+    padding: 20px 200px;
+}
 
+.add-form button {
+    display: inline-block;
+    padding: 0.35em 1.2em;
+    border: 0.1em solid black;
+    margin: 0 0.3em 0.3em 0;
+    border-radius: 0.12em;
+    box-sizing: border-box;
+    text-decoration: none;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    color: black;
+    text-align: center;
+    transition: all 0.2s;
+    /*background-color: #282c34*/
+    background: none;
+}
+
+.add-form button:hover {
+    color: white;
+    background-color: black;
+}
+
+.add-form button[disabled] {
+    background-color: #bbbbbb;
+    pointer-events: none;
 }
 
 .form-row {
@@ -36,5 +61,7 @@
 .form-row > textarea {
     flex: 6;
 }
+
+
 
 
