--- a/react/src/Components/style/RegisterForm.css
+++ b/react/src/Components/style/RegisterForm.css
@@ -6,21 +6,12 @@
 
 .register-form input {
   position: relative;
-  right: 95px;
-  width: 25%;
+  width: 20%;
   margin: 8px 0;
   border: none;
   border-radius: 18px;
   cursor: pointer;
   display: inline-block;
-}
-
-.register-form label {
-  position: relative;
-  right: 95px;
-  width: 200px;
-  display: inline-block;
-  padding: 8px;
 }
 
 #date {
@@ -30,13 +21,18 @@
 
 #gender {
   position: relative;
-  right: 95px;
-  width: 25%;
+  width: 20%;
   margin: 8px 0;
   border: none;
   border-radius: 18px;
   cursor: pointer;
   display: inline-block;
+}
+
+.register-form button {
+  border: none;
+  border-radius: 18px;
+  width: 20%;
 }
 
 .register-form a {
@@ -66,8 +62,3 @@
   position: relative;
   top: 70px;
 }
-
-/* #duplicatesError {
-  position: relative;
-  top: 75px;
-} */
