--- a/react/src/Components/style/Schedule.css
+++ b/react/src/Components/style/Schedule.css
@@ -33,7 +33,7 @@
   border-radius: 0.12em;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-weight: 300;
   color: black;
   text-align: center;
@@ -43,11 +43,14 @@
 }
 
 .schedule-list-container button:hover {
-  color: white;
-  background-color: black;
+  background-color: #39ace6;
 }
 
-.schedule-list-container button[disabled] {
-  background-color: #bbbbbb;
-  pointer-events: none;
+.schedule-list-container button {
+  border: none;
+  border-radius: 18px;
+  width: 15%;
+  background-color: #40bfff;
+  font-weight: bold;
+  color: white;
 }
