--- a/react/src/Components/style/TrainerSchedule.css
+++ b/react/src/Components/style/TrainerSchedule.css
@@ -25,11 +25,11 @@
 }
 
 #trainer-schedule .available {
-  background: cornflowerblue;
+  background: #40bfff;
 }
 
 #trainer-schedule .unavailable {
-  background: indianred;
+  background: #ffcf33;
 }
 
 #trainer-schedule button {
@@ -40,7 +40,7 @@
   box-sizing: border-box;
   text-decoration: none;
   text-transform: uppercase;
-  font-family: "Roboto", sans-serif;
+  font-family: 'Roboto', sans-serif;
   /* //font-weight: 400; */
   color: cornflowerblue;
   text-align: center;
