--- a/react/src/Components/style/PersonalSchedule.css
+++ b/react/src/Components/style/PersonalSchedule.css
@@ -1,7 +1,7 @@
 .personal-schedule-container {
   margin: 20px 30px 20px 340px;
   background: white;
-  opacity: 0.9;
+  /* opacity: 0.9; */
   color: black;
   padding: 20px;
   display: flex;
