--- a/react/src/App.css
+++ b/react/src/App.css
@@ -6,8 +6,6 @@ body {
 .App {
   text-align: center;
   background-color: #282c34;
-  /*background: url("https://wallpaperaccess.com/full/1633729.jpg");*/
-  /*height: 100%;*/
   z-index: -1;
 }
 
@@ -17,14 +15,17 @@ body {
 }
 
 .App-header {
-  color: white;
+  background-color: white;
+  color: black;
   height: 120px;
   margin-top: -30px;
   padding-top: 40px;
-  margin-bottom: 50px;
+  margin-bottom: 10px;
   position: fixed;
-  width: 100%;
-  padding-left: 300px;
+  width: 20%;
+  left: 48%;
+  border-radius: 18px;
+  /* padding-left: 300px; */
   z-index: 1;
 }
 
@@ -55,7 +56,7 @@ body {
   background-color: white;
   color: black;
   border-radius: 25px;
-  opacity: 0.7;
+  /* opacity: 0.7; */
   margin-left: 300px;
   margin-right: 300px;
   height: 140px;
@@ -88,7 +89,6 @@ body {
   color: black;
   text-align: center;
   transition: all 0.2s;
-  /*background-color: #282c34*/
   background: none;
 }
 
