--- a/react/src/Components/style/Courses.css
+++ b/react/src/Components/style/Courses.css
@@ -7,7 +7,7 @@
   display: flex;
   margin: 20px 30px 20px 300px;
   background: white;
-  opacity: 0.9;
+  /* opacity: 0.9; */
   color: black;
   padding: 10px;
 }
@@ -52,12 +52,12 @@
   border-radius: 18px;
   color: white;
   font-weight: 500;
-  background-color: #40bfff;
+  background-color: #007ab8;
 }
 
 .list-container button:hover {
   color: white;
-  background-color: #39ace6;
+  background-color: #00699e;
 }
 
 .list-container button[disabled] {
