--- a/react/src/Components/style/EditProfile.css
+++ b/react/src/Components/style/EditProfile.css
@@ -3,7 +3,6 @@
   left: 38%;
   bottom: 200px;
   background: white;
-  opacity: 0.9;
   color: black;
   width: 40%;
 }
@@ -13,7 +12,7 @@
   text-align: center;
   vertical-align: middle;
   display: inline;
-  width: 50%;
+  width: 400px;
 }
 .form-control {
   background: #f0f0f0;
@@ -39,31 +38,32 @@
   display: inline-block;
   padding: 8px;
 }
+
 #update-button {
   position: relative;
-  left: 320px;
+  left: 45%;
   bottom: 60px;
   border: none;
   border-radius: 18px;
-  background-color: #40bfff;
+  background-color: #007ab8;
   font-weight: 500;
 }
 
 #update-button button:hover {
-  background-color: #39ace6;
+  background-color: #00699e;
 }
 
 #reset-button {
   position: relative;
-  left: 150px;
+  left: 17%;
   bottom: 10px;
-  width: 10%;
+  width: 80px;
   border: none;
   border-radius: 18px;
-  background-color: #40bfff;
+  background-color: #007ab8;
   font-weight: 500;
 }
 
 #reset-button button:hover {
-  background-color: #39ace6;
+  background-color: #00699e;
 }
