--- a/react/src/Components/style/DisplayProfile.css
+++ b/react/src/Components/style/DisplayProfile.css
@@ -4,7 +4,7 @@
   margin: auto;
   text-align: center;
   position: relative;
-  left: 150px;
+  /* right: 100px; */
 }
 .card h3 {
   color: Black;
