remove button color

--- a/react/src/Components/style/TrainerSchedule.css
+++ b/react/src/Components/style/TrainerSchedule.css
@@ -20,11 +20,8 @@
   width: 100px;
 }
 
-
 .trainer-schedule .available {
-
-
-  background: #007ab8;
+  /* background: #007ab8; */
 }
 
 .trainer-schedule .unavailable {
